# EQPlatform-Guiding

./: .directory  .gitignore  README.md
driver/: eq_platform.h
firmware/: .gitignore  Cargo.toml
firmware/src/: eeprom.rs  eq_tracker.rs  main.rs  serial.rs  state_machine.rs  timer.rs
src/INDI_driver/: eq_platform.cpp  indi_eq_platform
src/Microcontroller_firmware/: Makefile  eeprom.c  globals.h  main.c  main.hex  states.c  timer.c  uart.c
