[package]
name = "eq-tracker"
version = "0.8.0"
edition = "2018"

[dependencies]
panic-halt = "0.2.0"
nb = "0.1.3"
ufmt = "0.1.0"
embedded-time = "0.10.1"
num = {version = "0.3.1", default-features = false}
staticvec = {version = "0.10.5", default-features = false}

[dependencies.atmega328p-hal]
git = "https://github.com/rahix/avr-hal"
rev = "f322d95c412699d6458e8dcb9f5fa7398bc0d998"
features = ["atmega328p", "rt"]

[dependencies.avr-device]
version = "0.2.3"
features = ["atmega328p"]

# Configure the build for minimal size
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

# This is needed because of a known bug https://github.com/Rahix/avr-hal/issues/125#issuecomment-771578390
[profile.dev.package.compiler_builtins]
overflow-checks = false

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
